unpackaged/main/default/objects/Consumer_Credit_Summary__c/Consumer_Credit_Summary__c.object-meta.xml
<CustomObject>
    <label>Consumer Credit Summary</label>
    <nameField>
        <displayFormat>CCS-{0000000}</displayFormat>
        <label>Consumer Credit Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Credit Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>