unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/amountOnJudgements__c.field-meta.xml
<CustomField>
    <fullName>amountOnJudgements__c</fullName>
    <label>amountOnJudgements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>