unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <label>AttachmentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>