unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/BalanceAmount_InstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>BalanceAmount_InstallmentAmount__c</fullName>
    <label>BalanceAmount InstallmentAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>