unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/BalanceAmount_RevolvingAmount__c.field-meta.xml
<CustomField>
    <fullName>BalanceAmount_RevolvingAmount__c</fullName>
    <label>BalanceAmount RevolvingAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>