unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/BankruptciesCount__c.field-meta.xml
<CustomField>
    <fullName>BankruptciesCount__c</fullName>
    <label>BankruptciesCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>