unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/bankruptciesLast24Months__c.field-meta.xml
<CustomField>
    <fullName>bankruptciesLast24Months__c</fullName>
    <label>Bankruptcies Last 24 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>