unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/BankruptcyScore__c.field-meta.xml
<CustomField>
    <fullName>BankruptcyScore__c</fullName>
    <label>Bankruptcy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>