unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Birthdate_Match__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Match__c</fullName>
    <description>Yes if Birthdate on Contact or Lead record matches birth date on credit report</description>
    <inlineHelpText>Date of Birth matches on Credit Report</inlineHelpText>
    <label>Birthdate Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>