unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/CollectionCount__c.field-meta.xml
<CustomField>
    <fullName>CollectionCount__c</fullName>
    <label>CollectionCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>