unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Consent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Consent_DateTime__c</fullName>
    <description>Captures the exact date and time consent was given by the customer</description>
    <label>Consent DateTime</label>
    <type>DateTime</type>
</CustomField>