unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Consumer_Credit_Id__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Credit_Id__c</fullName>
    <label>Consumer Credit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>