unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumer Credit Summaries</relationshipLabel>
    <relationshipName>Consumer_Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>