unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Credit_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Credit_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value to show if the customer agreed to having credit pulled. Combination of this field and Consent DateTime will show which version of the credit auth terms and conditions the customer agreed to if needed</description>
    <label>Credit Authorization</label>
    <type>Checkbox</type>
</CustomField>