unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Credit_Bureau__c.field-meta.xml
<CustomField>
    <fullName>Credit_Bureau__c</fullName>
    <description>The credit bureau we pulled credit from</description>
    <label>Credit Bureau</label>
    <length>255</length>
    <type>Text</type>
</CustomField>