unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Credit_Pull_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Pull_Date__c</fullName>
    <label>Credit Pull Date</label>
    <type>Date</type>
</CustomField>