unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Credit_Report_DOB__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_DOB__c</fullName>
    <description>Date of Birth on the credit report</description>
    <inlineHelpText>Date of Birth on the credit report</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>