unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Credit_Report_Info__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Report Info</label>
    <referenceTo>Credit_Report_Info__c</referenceTo>
    <relationshipLabel>Consumer Credit Summaries</relationshipLabel>
    <relationshipName>Consumer_Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>