unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Customer_Form__c.field-meta.xml
<CustomField>
    <fullName>Customer_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the related Customer Form record associated with the Credit Pull</description>
    <label>Customer Form</label>
    <referenceTo>Customer_Form__c</referenceTo>
    <relationshipLabel>Consumer Credit Summaries</relationshipLabel>
    <relationshipName>Consumer_Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>