unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log__c</fullName>
    <label>Debug Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>