unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Decision_Engine_Fico_Source__c.field-meta.xml
<CustomField>
    <fullName>Decision_Engine_Fico_Source__c</fullName>
    <description>Identifies the source used by the Decision Engine to retrieve the applicant’s FICO score.</description>
    <label>Decision Engine Fico Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SELF_REPORTED</fullName>
            </value>
            <value>
                <fullName>CREDIT_REPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>