unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Delinq30__c.field-meta.xml
<CustomField>
    <fullName>Delinq30__c</fullName>
    <label>Delinq30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>