unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Delinq60__c.field-meta.xml
<CustomField>
    <fullName>Delinq60__c</fullName>
    <label>Delinq60</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>