unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Delinq90__c.field-meta.xml
<CustomField>
    <fullName>Delinq90__c</fullName>
    <label>Delinq90</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>