unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/DelinquencyCounters_Derogatory__c.field-meta.xml
<CustomField>
    <fullName>DelinquencyCounters_Derogatory__c</fullName>
    <label>DelinquencyCounters Derogatory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>