unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <label>ErrorType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>