unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/External_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Request_ID__c</fullName>
    <description>References the credit_pull_id column in the PostgreSQL credit_pull table, which stores results from the Experian soft pull service.</description>
    <externalId>true</externalId>
    <label>External Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>