unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name used on the inquiry</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>