unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last Name used in the inquiry</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>