unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Contact</label>
    <referenceTo>Lead_Contact__c</referenceTo>
    <relationshipLabel>Consumer Credit Summaries</relationshipLabel>
    <relationshipName>Consumer_Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>