unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/MortgageTrades__c.field-meta.xml
<CustomField>
    <fullName>MortgageTrades__c</fullName>
    <description>Captures the Count of Mortgage Trades from credit profile response. Used in Credit Model.</description>
    <label>MortgageTrades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>