unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/MostRecentTradeDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentTradeDate__c</fullName>
    <label>MostRecentTradeDate</label>
    <type>Date</type>
</CustomField>