unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/OldestTradeDate__c.field-meta.xml
<CustomField>
    <fullName>OldestTradeDate__c</fullName>
    <label>OldestTradeDate</label>
    <type>Date</type>
</CustomField>