unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/PaidAccounts__c.field-meta.xml
<CustomField>
    <fullName>PaidAccounts__c</fullName>
    <label>PaidAccounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>