unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/PeriodInquiries__c.field-meta.xml
<CustomField>
    <fullName>PeriodInquiries__c</fullName>
    <label>PeriodInquiries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>