unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Personal_Credit__c.field-meta.xml
<CustomField>
    <fullName>Personal_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Credit</label>
    <referenceTo>Personal_Credit__c</referenceTo>
    <relationshipLabel>Consumer Credit Summaries</relationshipLabel>
    <relationshipName>Consumer_Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>