unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/PublicRecords__c.field-meta.xml
<CustomField>
    <fullName>PublicRecords__c</fullName>
    <label>Public Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>