unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Satisfactory_Count__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Count__c</fullName>
    <label>Satisfactory Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>