unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Sent_to_Server__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Server__c</fullName>
    <label>Sent to Server</label>
    <type>DateTime</type>
</CustomField>