unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/SSN_Match__c.field-meta.xml
<CustomField>
    <fullName>SSN_Match__c</fullName>
    <description>Yes if SSN on inquiry matches SSN on credit report</description>
    <inlineHelpText>SSN on inquiry matches SSN on credit report</inlineHelpText>
    <label>SSN Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>