unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Trades_12Months__c.field-meta.xml
<CustomField>
    <fullName>Trades_12Months__c</fullName>
    <label>Trades 12Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>