unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/TradesOrOther__c.field-meta.xml
<CustomField>
    <fullName>TradesOrOther__c</fullName>
    <label>TradesOrOther</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>