unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/Unconfirmed_SSN__c.field-meta.xml
<CustomField>
    <fullName>Unconfirmed_SSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unconfirmed SSN</label>
    <type>Checkbox</type>
</CustomField>