unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/unpaidTaxLiens__c.field-meta.xml
<CustomField>
    <fullName>unpaidTaxLiens__c</fullName>
    <label>unpaidTaxLiens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>