unpackaged/main/default/objects/Consumer_Credit_Summary__c/fields/WC_Credit_Review_Id__c.field-meta.xml
<CustomField>
    <fullName>WC_Credit_Review_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WC Credit Review Id</label>
    <referenceTo>Credit_Review__c</referenceTo>
    <relationshipLabel>Consumer Credit Summaries</relationshipLabel>
    <relationshipName>Consumer_Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>