unpackaged/main/default/objects/Consumer_Credit_Summary__c/recordTypes/Equifax_Consumer.recordType-meta.xml
<RecordType>
    <fullName>Equifax_Consumer</fullName>
    <active>true</active>
    <label>Equifax Consumer</label>
</RecordType>