unpackaged/main/default/objects/Consumer_Credit_Summary__c/recordTypes/Experian_Consumer.recordType-meta.xml
<RecordType>
    <fullName>Experian_Consumer</fullName>
    <active>true</active>
    <label>Experian Consumer</label>
</RecordType>