unpackaged/main/default/objects/Consumer_Credit_Summary__c/recordTypes/Merit.recordType-meta.xml
<RecordType>
    <fullName>Merit</fullName>
    <active>true</active>
    <description>Consumer Credit Summary is based on a previous Credit Score</description>
    <label>Merit</label>
</RecordType>